# reto-tecnico-WM

./: .gitignore  PROCESS.md  README.md
retowm/: .gitignore  README.md  pyproject.toml  requirements.txt
retowm/conf/base/: catalog.yml  parameters.yml
retowm/notebooks/: 01_eda_problem_framing.ipynb  02_business_results.ipynb  03_technical_results.ipynb
retowm/src/retowm/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
retowm/src/retowm/pipelines/data_integration/: nodes.py  pipeline.py
retowm/src/retowm/pipelines/data_processing/: nodes.py  pipeline.py
retowm/src/retowm/pipelines/feature_engineering/: nodes.py  pipeline.py
retowm/src/retowm/pipelines/model_input/: nodes.py  pipeline.py
retowm/src/retowm/pipelines/modeling/: nodes.py  pipeline.py
retowm/src/retowm/pipelines/primary/: nodes.py
